fix: fix naming of ValidationException, remove @DependsOn